--- a/index.html
+++ b/index.html
@@ -1,14 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+    <title>Bondi</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Bondi</title>
+    <!-- Google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500&display=swap" rel="stylesheet">
+    <!-- FontAwesome -->
+    <link href="fontawesome-6.2.1/css/all.css" rel="stylesheet">
+    <!-- Bootstrap -->
+    <link href="bootstrab-v5.2.3/bootstrap.min.css" rel="stylesheet">
+    <!-- CSS file -->
+    <link href="css/style.css" rel="stylesheet">
 </head>
-<body>
-    
 
+<body>
+
+
+
+    <i class="fa-solid fa-user""></i>
+    <!-- uses solid style -->
+    <i class=" fa-brands fa-github-square"></i>
+    <!-- uses brand style -->
+
+
+
+
+
+
+
+    <script src="bootstrab-v5.2.3/bootstrap.bundle.min.js"></script>
+    <script src="js/app.js"></script>
 </body>
+
 </html>
