--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500&display=swap" rel="stylesheet">
-    <!-- FontAwesome -->
+    <!-- Font Awesome -->
     <link href="fontawesome-6.2.1/css/all.css" rel="stylesheet">
     <!-- Bootstrap -->
     <link href="bootstrab-v5.2.3/bootstrap.min.css" rel="stylesheet">
@@ -20,20 +20,111 @@
 
 <body>
 
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg sticky-top">
+        <div class="container">
+            <a class="navbar-brand" href="#">
+                <img src="imgs/logo.png" alt="logo">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main"
+                aria-controls="main" aria-expanded="false" aria-label="Toggle navigation">
+                <i class="fa-solid fa-bars"></i>
+            </button>
+            <div class="collapse navbar-collapse" id="main">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link p-2 p-lg-3 active" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link p-2 p-lg-3" href="#">Services</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link p-2 p-lg-3" href="#">Portfolio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link p-2 p-lg-3" href="#">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link p-2 p-lg-3" href="#">Contact</a>
+                    </li>
+                </ul>
+                <div class="search ps-3 pe-3 d-none d-lg-block">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                </div>
+                <a class="btn rounded-pill main-btn d-none d-lg-block ps-4 pe-4 pt-2 pb-2" href="#">Login</a>
+            </div>
+        </div>
+    </nav>
 
+    <!-- Landing -->
+    <div class="landing d-flex justify-content-center align-items-center">
+        <div class="text-center text-light">
+            <h1>Taste the Creativity</h1>
+            <p class="fs-6 text-white-50 mb-5">We make awesome graphic and web design</p>
+            <a class="btn rounded-pill main-btn d-none d-lg-block ps-3 pe-3 pt-2 pb-2" href="#">Get Started</a>
+        </div>
+    </div>
 
-    <i class="fa-solid fa-user""></i>
-    <!-- uses solid style -->
-    <i class=" fa-brands fa-github-square"></i>
-    <!-- uses brand style -->
+    <!-- Features -->
+    <div class="features text-center pt-5 pb-5">
+        <div class="container">
+            <div class="main-title mt-5 mb-5 position-relative">
+                <img class="mb-4" src="imgs/title.png" alt="">
+                <h2>We are Good at</h2>
+                <p class="text-black-50">SOME OF THESE STUFF UNDER</p>
+            </div>
+            <div class="row">
+                <div class="col-md-6 col-lg-4 ">
+                    <div class="feat">
+                        <div class="icon-holder position-relative">
+                            <i class="fa-solid fa-1 position-absolute bottom-0 number"></i>
+                            <i class="fa-solid fa-pencil fa-4x position-absolute bottom-0 icon"></i>
+                        </div>
+                        <h4 class="mb-3 mt-3">GRAPHIC DESIGN</h4>
+                        <p class="text-black-50 lh-lg">Pellentesque in ipsum id orci porta dapibus. Vivamus magna justo,
+                            lacinia eget consectetur
+                            sed, convallis at tellus.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-4 ">
+                    <div class="feat">
+                        <div class="icon-holder position-relative">
+                            <i class="fa-solid fa-2 position-absolute bottom-0 number"></i>
+                            <i class="fa-solid fa-tv fa-4x position-absolute bottom-0 icon"></i>
+                        </div>
+                        <h4 class="mb-3 mt-3">GRAPHIC DESIGN</h4>
+                        <p class="text-black-50 lh-lg">Pellentesque in ipsum id orci porta dapibus. Vivamus magna justo,
+                            lacinia eget consectetur
+                            sed, convallis at tellus.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-4 ">
+                    <div class="feat">
+                        <div class="icon-holder position-relative">
+                            <i class="fa-solid fa-3 position-absolute bottom-0 number"></i>
+                            <i class="fa-solid fa-plug fa-4x position-absolute bottom-0 icon"></i>
+                        </div>
+                        <h4 class="mb-3 mt-3">GRAPHIC DESIGN</h4>
+                        <p class="text-black-50 lh-lg">Pellentesque in ipsum id orci porta dapibus. Vivamus magna justo,
+                            lacinia eget consectetur
+                            sed, convallis at tellus.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
-
+    <!--  -->
 
 
 
 
 
     <script src="bootstrab-v5.2.3/bootstrap.bundle.min.js"></script>
+    <script src="fontawesome-6.2.1/js/all.js"></script>
     <script src="js/app.js"></script>
 </body>
 
