--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500&display=swap" rel="stylesheet">
     <!-- Font Awesome -->
-    <link href="fontawesome-6.2.1/css/all.css" rel="stylesheet">
+    <link href="fontawesome-v6.2.1/css/all.css" rel="stylesheet">
     <!-- Bootstrap -->
     <link href="bootstrab-v5.2.3/bootstrap.min.css" rel="stylesheet">
     <!-- CSS file -->
@@ -61,7 +61,7 @@
         <div class="text-center text-light">
             <h1>Taste the Creativity</h1>
             <p class="fs-6 text-white-50 mb-5">We make awesome graphic and web design</p>
-            <a class="btn rounded-pill main-btn d-none d-lg-block ps-3 pe-3 pt-2 pb-2" href="#">Get Started</a>
+            <a class="btn rounded-pill main-btn d-lg-block ps-3 pe-3 pt-2 pb-2" href="#">Get Started</a>
         </div>
     </div>
 
@@ -117,14 +117,115 @@
         </div>
     </div>
 
-    <!--  -->
+    <!-- Our Work -->
+    <div class="our_work text-center pt-5 pb-5">
+        <div class="container">
+            <div class="main-title mt-5 mb-5 position-relative">
+                <img class="mb-4" src="imgs/title.png" alt="">
+                <h2>We Make This</h2>
+                <p class="text-black-50">PREPARE TO BE AMAZED</p>
+            </div>
 
+            <ul class="list-unstyled d-flex justify-content-center mt-5 mb-5">
+                <li class="active rounded-pill">All</li>
+                <li>Design</li>
+                <li>Code</li>
+                <li>Photo</li>
+                <li>App</li>
+            </ul>
 
+            <div class="row">
+                <div class="col-sm-6 col-md-4 col-lg-3">
+                    <div class="box mb-3 bg-white" data-work="App">
+                        <img class="img-fluid" src="imgs/work-01.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-4 col-lg-3">
+                    <div class="box mb-3 bg-white" data-work="App">
+                        <img class="img-fluid" src="imgs/work-02.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-4 col-lg-3">
+                    <div class="box mb-3 bg-white" data-work="App">
+                        <img class="img-fluid" src="imgs/work-03.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-4 col-lg-3">
+                    <div class="box mb-3 bg-white" data-work="App">
+                        <img class="img-fluid" src="imgs/work-04.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-4 col-lg-3">
+                    <div class="box mb-3 bg-white" data-work="App">
+                        <img class="img-fluid" src="imgs/work-05.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-4 col-lg-3">
+                    <div class="box mb-3 bg-white" data-work="App">
+                        <img class="img-fluid" src="imgs/work-06.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-4 col-lg-3">
+                    <div class="box mb-3 bg-white" data-work="App">
+                        <img class="img-fluid" src="imgs/work-07.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-4 col-lg-3">
+                    <div class="box mb-3 bg-white" data-work="App">
+                        <img class="img-fluid" src="imgs/work-08.jpg" alt="">
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="d-flex justify-content-center mt-5">
+                <a class="btn rounded-pill main-btn d-lg-block ps-4 pe-4 pt-2 pb-2" href="#">I Want More</a>
+            </div>
+        </div>
+    </div>
+
+    <!-- Stuff -->
+    <div class="stuff pt-5">
+        <div class="container">
+
+            <div class="main-title mt-5 mb-5 position-relative text-center">
+                <img class="mb-4" src="imgs/title.png" alt="">
+                <h2>Some Stuff About Us</h2>
+                <p class="text-black-50">THE GREAT TEAM</p>
+            </div>
+
+            <p class="description text-center mb-5 text-black-50 m-auto">
+                Donec rutrum congue leo eget malesuada. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.
+                Pellentesque in ipsum id orci porta dapibus. Proin eget tortor risus. Donec sollicitudin molestie
+                malesuada.
+            </p>
+
+            <div class="row align-items-center">
+
+                <div class="col-lg-4 mb-4 text-center text-md-start">
+                    <div class="text">
+                        <h4>Retina Design</h4>
+                        <p class="text-black-50 fs-6">Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.</p>
+                        <p class="text-black-50 fs-6">Donec rutrum congue leo eget malesuada. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Pellentesque in ipsum id orci porta dapibus. Proin eget tortor risus. Donec sollicitudin molestie malesuada.</p>
+                        <a class="btn rounded-pill main-btn d-lg-block ps-4 pe-4 pt-2 pb-2 w-50" href="#">Order Now</a>
+                    </div>
+                </div>
+
+                <div class="col-lg-8">
+                    <img class="img-fluid" src="imgs/laptop.png" alt="">
+                </div>
+
+            </div>
+
+        </div>
+    </div>
+
+    
 
 
 
     <script src="bootstrab-v5.2.3/bootstrap.bundle.min.js"></script>
-    <script src="fontawesome-6.2.1/js/all.js"></script>
+    <script src="fontawesome-v6.2.1/js/all.js"></script>
     <script src="js/app.js"></script>
 </body>
 
