--- a/index.html
+++ b/index.html
@@ -205,8 +205,11 @@
                 <div class="col-lg-4 mb-4 text-center text-md-start">
                     <div class="text">
                         <h4>Retina Design</h4>
-                        <p class="text-black-50 fs-6">Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.</p>
-                        <p class="text-black-50 fs-6">Donec rutrum congue leo eget malesuada. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Pellentesque in ipsum id orci porta dapibus. Proin eget tortor risus. Donec sollicitudin molestie malesuada.</p>
+                        <p class="text-black-50 fs-6">Vestibulum ac diam sit amet quam vehicula elementum sed sit amet
+                            dui. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.</p>
+                        <p class="text-black-50 fs-6">Donec rutrum congue leo eget malesuada. Mauris blandit aliquet
+                            elit, eget tincidunt nibh pulvinar a. Pellentesque in ipsum id orci porta dapibus. Proin
+                            eget tortor risus. Donec sollicitudin molestie malesuada.</p>
                         <a class="btn rounded-pill main-btn d-lg-block ps-4 pe-4 pt-2 pb-2 w-50" href="#">Order Now</a>
                     </div>
                 </div>
@@ -220,9 +223,232 @@
         </div>
     </div>
 
-    
+    <!-- Team -->
+    <div class="team text-center pb-5 pt-5">
+        <div class="container pb-5 pt-5">
+            <h2 class="fw-bold">Meet The Team</h2>
+            <p class="text-black-50 mb-50">
+                Donec rutrum congue leo eget malesuada. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.
+                Pellentesque in ipsum id orci porta dapibus. Proin eget tortor risus. Donec sollicitudin molestie
+                malesuada.
+            </p>
+            <div class="row">
 
+                <div class="col-md-6 col-lg-3">
+                    <div class="box bg-white">
+                        <img class="img-fluid" src="imgs/team-1.png" alt="">
+                        <h4 class="p-3 text-light">Luke Skywalker</h4>
+                        <blockquote class="text-black-50 p-3">“I don't understand how we got by those troops. I thought
+                            we were dead.“</blockquote>
+                    </div>
+                </div>
 
+                <div class="col-md-6 col-lg-3">
+                    <div class="box bg-white">
+                        <img class="img-fluid" src="imgs/team-2.png" alt="">
+                        <h4 class="p-3 text-light">Luke Skywalker</h4>
+                        <blockquote class="text-black-50 p-3">“I don't understand how we got by those troops. I thought
+                            we were dead.“</blockquote>
+                    </div>
+                </div>
+
+                <div class="col-md-6 col-lg-3">
+                    <div class="box bg-white">
+                        <img class="img-fluid" src="imgs/team-3.png" alt="">
+                        <h4 class="p-3 text-light">Luke Skywalker</h4>
+                        <blockquote class="text-black-50 p-3">“I don't understand how we got by those troops. I thought
+                            we were dead.“</blockquote>
+                    </div>
+                </div>
+
+                <div class="col-md-6 col-lg-3">
+                    <div class="box bg-white">
+                        <img class="img-fluid" src="imgs/team-4.png" alt="">
+                        <h4 class="p-3 text-light">Luke Skywalker</h4>
+                        <blockquote class="text-black-50 p-3">“I don't understand how we got by those troops. I thought
+                            we were dead.“</blockquote>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <!-- Techs -->
+    <div class="techs pt-5 pb-5 text-center">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-sm-6 col-md-4 col-lg-2 mt-3 mb-3">
+                    <img class="img-fluid" src="imgs/tech-1.png" alt="">
+                </div>
+                <div class="col-sm-6 col-md-4 col-lg-2 mt-3 mb-3">
+                    <img class="img-fluid" src="imgs/tech-2.png" alt="">
+                </div>
+                <div class="col-sm-6 col-md-4 col-lg-2 mt-3 mb-3">
+                    <img class="img-fluid" src="imgs/tech-3.png" alt="">
+                </div>
+                <div class="col-sm-6 col-md-4 col-lg-2 mt-3 mb-3">
+                    <img class="img-fluid" src="imgs/tech-4.png" alt="">
+                </div>
+                <div class="col-sm-6 col-md-4 col-lg-2 mt-3 mb-3">
+                    <img class="img-fluid" src="imgs/tech-1.png" alt="">
+                </div>
+                <div class="col-sm-6 col-md-4 col-lg-2 mt-3 mb-3">
+                    <img class="img-fluid" src="imgs/tech-2.png" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Project -->
+    <div class="project text-center pt-5 pb-5 text-light">
+        <h2>Start Your Project Now</h2>
+        <p class="text-white-50">Leave your description and we start the engine.Don't worry,you can cancel anytime</p>
+        <div class="d-flex justify-content-center mt-5 mb-5">
+            <a class="btn rounded-pill main-btn ps-5 pe-5" href="#">Start Project</a>
+        </div>
+    </div>
+
+    <!-- Blog -->
+    <div class="blog pt-5 pb-5">
+        <div class="container">
+            <div class="main-title mt-5 mb-5 position-relative text-center">
+                <img class="mb-4" src="imgs/title.png" alt="">
+                <h2>Read Our Blog</h2>
+                <p class="text-black-50">NEW STORIES</p>
+            </div>
+            <div class="row">
+
+                <div class="col-md-6 col-lg-4">
+                    <div class="card">
+                        <img src="imgs/blog-1.jpg" class="card-img-top" alt="">
+                        <div class="card-body">
+                            <span class="text-black-50">Jan 18, 2022</span>
+                            <h5 class="card-title">Some Awesome Blog Title Here</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-4">
+                    <div class="card">
+                        <img src="imgs/blog-2.jpg" class="card-img-top" alt="">
+                        <div class="card-body">
+                            <span class="text-black-50">Jan 18, 2022</span>
+                            <h5 class="card-title">Some Awesome Blog Title Here</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-4">
+                    <div class="card">
+                        <img src="imgs/blog-3.jpg" class="card-img-top" alt="">
+                        <div class="card-body">
+                            <span class="text-black-50">Jan 18, 2022</span>
+                            <h5 class="card-title">Some Awesome Blog Title Here</h5>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <div class="d-flex justify-content-center mt-5 mb-5">
+                <a class="btn rounded-pill main-btn ps-5 pe-5" href="#">More Stories</a>
+            </div>
+        </div>
+
+    </div>
+
+    <!-- Subscribe -->
+    <div class="subscribe pt-5 pb-5 text-center text-md-start">
+        <div class="container">
+            <form class="row align-items-center">
+                <div class="col-md-6 col-lg-3">
+                    <div class="fw-bold fs-5 mb-3">Subscribe to our Newsletter:</div>
+                </div>
+                <div class="col-md-6 co-lg-7 mb-3">
+                    <input class="w-100 text-light p-2 bg-transparent" type="email" placeholder="Enter Your Email">
+                </div>
+                <div class="col-md-6 col-lg-2">
+                    <input class="btn rounded-pill" type="submit" value="Subscribe">
+                </div>
+            </form>
+        </div>
+    </div>
+
+    <!-- Footer -->
+    <div class="footer pt-5 pb-5 text-white-50 text-center text-md-start">
+        <div class="container">
+            <div class="row">
+
+                <div class="col-md-6 col-lg-4">
+                    <div class="info mb-5">
+                        <img class="mb-4" src="imgs/logo.png" alt="">
+                        <p class="mb-5">Pellentesque in ipsum id orci porta dapibus. Vivamus magna justo, lacinia eget
+                            consectetur sed, convallis at tellus.
+                        </p>
+                        <div class="copyright">
+                            Created By <a class="name" href="https://github.com/muh-osman" target="_blank">Muhammed
+                                Osman</a>
+                            <div>&copy; 2022 - <span class="inc">Bondi Inc</span></div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-6 col-lg-2">
+                    <div class="links">
+                        <h5 class="text-light">Links</h5>
+                        <ul class="list-unstyled lh-lg">
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">Our Services</a></li>
+                            <li><a href="#">Portfolio</a></li>
+                            <li><a href="#">Testimonials</a></li>
+                            <li><a href="#">Support</a></li>
+                            <li><a href="#">Terms and Condition</a></li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="col-md-6 col-lg-2">
+                    <div class="links">
+                        <h5 class="text-light">About Us</h5>
+                        <ul class="list-unstyled lh-lg">
+                            <li><a href="#">Sign In</a></li>
+                            <li><a href="#">Register</a></li>
+                            <li><a href="#">About Us</a></li>
+                            <li><a href="#">Blog</a></li>
+                            <li><a href="#">Contact Us</a></li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="col-md-6 col-lg-4">
+                    <div class="contact">
+                        <h5 class="text-light">Contact Us</h5>
+                        <p class="lh-lg mt-3 mb-5">Get in touch with us via mail phone.We are waiting for your call or
+                            message</p>
+                        <a class="btn main-btn rounded-pill w-100"
+                            href="mailto:mr.muhammed.osman@gmail.com">muhammed.osman@gmail.com</a>
+                        <ul class="d-flex mt-5 list-unstyled gap-3">
+                            <li>
+                                <a class="d-block text-light" href="https://github.com/muh-osman">
+                                    <i class="fa-brands fa-github fa-lg github rounded-circle p-2"></i></a>
+                            </li>
+                            <li>
+                                <a class="d-block text-light" href="https://twitter.com/muh_ail">
+                                    <i class="fa-brands fa-twitter fa-lg twitter rounded-circle p-2"></i></a>
+                            </li>
+                            <li>
+                                <a class="d-block text-light" href="https://www.linkedin.com/in/muhail/">
+                                    <i class="fa-brands fa-linkedin fa-lg linkedin rounded-circle p-2"></i></a>
+                            </li>
+                            <li>
+                                <a class="d-block text-light" href="https://www.youtube.com/@notCodes/featured">
+                                    <i class="fa-brands fa-youtube fa-lg youtube rounded-circle p-2"></i></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
 
     <script src="bootstrab-v5.2.3/bootstrap.bundle.min.js"></script>
     <script src="fontawesome-v6.2.1/js/all.js"></script>
